--- a/Friends/Info.plist
+++ b/Friends/Info.plist
@@ -58,5 +58,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>This app wants to take pictures.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app wants to use your photos.</string>
 </dict>
 </plist>
